<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="how_was_the_service">How was service?</string>
    <string name="amazing_service">Amazing (20%)</string>
    <string name="good_service">Good (18%)</string>
    <string name="ok_service">OK (15%)</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="dolar">$ </string>
    <string name="dark_mode">Dark Mode</string>
    <string name="setting">Setting</string>
    <string name="pref_key_dark">Key Dark Mode</string>
    <string name="splashscreen">Splash Screen</string>
</resources>